RESOLVED FIXED311519
REGRESSION(310393@main): [WPE][GTK] Broke GStreamer 1.28 video rendering for software video decoders
https://bugs.webkit.org/show_bug.cgi?id=311519
Summary REGRESSION(310393@main): [WPE][GTK] Broke GStreamer 1.28 video rendering for ...
Philippe Normand
Reported 2026-04-05 03:55:09 PDT
At least with GStreamer 1.28 where glupload uses the udmabuf allocator. I haven't checked with 1.26 yet. Repro: WEBKIT_DISABLE_SANDBOX_THIS_IS_DANGEROUS=1 GST_PLUGIN_FEATURE_RANK=vah264dec:0 run-minibrowser --gtk file://$PWD/LayoutTests/media/content/test.mp4 Here YU12 (DRM_FORMAT_YUV420) is negotiated on the video sink. importYUV() fails due to a importToTexture() call returning nullptr. Only a couple video frames are rendered, there is a lot of flickering.
Attachments
Philippe Normand
Comment 1 2026-04-06 02:33:31 PDT
This isn't an issue in 1.26 because for that scenario the sink negotiates video/x-raw(memory:GLMemory),format=I420 so not DMABuf...
Philippe Normand
Comment 2 2026-04-06 04:14:54 PDT
EWS
Comment 3 2026-04-06 06:59:37 PDT
Committed 310641@main (22a068588490): <https://commits.webkit.org/310641@main> Reviewed commits have been landed. Closing PR #62111 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-04-06 07:00:14 PDT
Note You need to log in before you can comment on or make changes to this bug.