REGRESSION(310393@main): [WPE][GTK] Broke GStreamer 1.28 video rendering for software video decoders https://bugs.webkit.org/show_bug.cgi?id=311519

Reviewed by Nikolas Zimmermann.

YUV buffers importation to EGLImages was failing because the borrowed DMABuf file descriptors were
closed too early. Without this patch, moving a borrowed UnixFileDescriptor to another one would make
the new descriptor owned and it would be closed at destruction.

Passing by, add a borrow() utility method to UnixFileDescriptor and use it in the
CoordinatedPlatformLayerBufferDMABuf.

* Source/WTF/wtf/unix/UnixFileDescriptor.h:
(WTF::UnixFileDescriptor::UnixFileDescriptor):
(WTF::UnixFileDescriptor::borrow const):
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferDMABuf.cpp:
(WebCore::CoordinatedPlatformLayerBufferDMABuf::importYUV const):

Canonical link: https://commits.webkit.org/310641@main